<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".task7.activity.DemoActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:lines="1"
        android:paddingHorizontal="@dimen/_12sdp"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/buttonAdd"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="@string/add"
        android:background="@drawable/my_rectangle"
        app:layout_constraintEnd_toStartOf="@id/buttonDelete"
        app:layout_constraintStart_toEndOf="@id/edittextName"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/my_rectangle"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
        app:layout_constraintStart_toEndOf="@id/buttonAdd"
        tools:ignore="MissingConstraints" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCopyLeftToRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy"
        app:layout_constraintEnd_toStartOf="@id/buttonCopyRightToLeft"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@id/edittextName"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCopyRightToLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy1"
        app:layout_constraintBottom_toBottomOf="@+id/buttonCopyLeftToRight"
        app:layout_constraintEnd_toStartOf="@id/buttonMoveLeftToRight"
        app:layout_constraintStart_toEndOf="@id/buttonCopyLeftToRight"
        app:layout_constraintTop_toTopOf="@+id/buttonCopyLeftToRight"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonMoveLeftToRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move"
        app:layout_constraintEnd_toStartOf="@id/buttonMoveRightToLeft"
        app:layout_constraintStart_toEndOf="@id/buttonCopyRightToLeft"
        app:layout_constraintTop_toTopOf="@+id/buttonCopyLeftToRight"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonMoveRightToLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move1"
        app:layout_constraintBottom_toBottomOf="@+id/buttonCopyLeftToRight"
        app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
        app:layout_constraintStart_toEndOf="@id/buttonMoveLeftToRight"
        app:layout_constraintTop_toTopOf="@+id/buttonCopyLeftToRight"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch1"
        app:layout_constraintEnd_toStartOf="@id/buttonClear"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@+id/buttonMoveLeftToRight"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
        app:layout_constraintStart_toEndOf="@id/buttonSwitch"
        app:layout_constraintTop_toBottomOf="@+id/buttonMoveLeftToRight"
        tools:ignore="MissingConstraints" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewFirst"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSwitch" />

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/_2sdp"
        android:layout_height="0dp"
        android:background="@color/colorTextLightGray"
        app:layout_constraintStart_toEndOf="@id/recyclerViewFirst"
        app:layout_constraintEnd_toStartOf="@id/recyclerViewSecond"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSwitch" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSecond"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view"
        app:layout_constraintTop_toBottomOf="@id/buttonSwitch" />
</androidx.constraintlayout.widget.ConstraintLayout>